Convert HTML/CSS Portfolio page with Desktop version

--- a/html/scss/style.css
+++ b/html/scss/style.css
@@ -1642,31 +1642,139 @@ h1.title {
   position: relative;
   top: 115px; }
 
-/* line 2, ../../jade/scss/_portfolio.scss */
-.portfolio-page .portfolio-slider {
-  margin: 70px 0 85px; }
+/* line 1, ../../jade/scss/_portfolio.scss */
+.portfolio-page {
+  padding-bottom: 0;
+  margin-bottom: -122px; }
   /* line 4, ../../jade/scss/_portfolio.scss */
-  .portfolio-page .portfolio-slider li {
-    display: inline-block;
-    background: #fff;
+  .portfolio-page h1.title {
+    margin: 48px 0 57px 0; }
+  /* line 7, ../../jade/scss/_portfolio.scss */
+  .portfolio-page .image-list li {
     width: 170px;
     height: 170px;
-    text-align: center;
-    vertical-align: middle; }
-    /* line 11, ../../jade/scss/_portfolio.scss */
-    .portfolio-page .portfolio-slider li img {
-      height: auto;
-      width: 100px; }
-/* line 18, ../../jade/scss/_portfolio.scss */
-.portfolio-page .portfolio-content {
-  background: #fff; }
-/* line 22, ../../jade/scss/_portfolio.scss */
-.portfolio-page ul.portfolio-content-detail-slider {
-  width: 370px; }
-/* line 26, ../../jade/scss/_portfolio.scss */
-.portfolio-page .portfolio-content-detail {
-  margin: 40px 50px 50px 0;
-  color: #000000; }
+    display: inline-block;
+    margin-right: 25px;
+    margin-left: 0;
+    background: #000000;
+    opacity: 0.8; }
+    /* line 15, ../../jade/scss/_portfolio.scss */
+    .portfolio-page .image-list li.active {
+      opacity: 1;
+      position: relative; }
+      /* line 18, ../../jade/scss/_portfolio.scss */
+      .portfolio-page .image-list li.active:before {
+        position: absolute;
+        content: "";
+        width: 0px;
+        border-left: 11px solid transparent;
+        border-right: 11px solid transparent;
+        border-bottom: 11px solid #ffffff;
+        right: 41%;
+        bottom: -88px; }
+    /* line 29, ../../jade/scss/_portfolio.scss */
+    .portfolio-page .image-list li a {
+      padding: 0; }
+    /* line 32, ../../jade/scss/_portfolio.scss */
+    .portfolio-page .image-list li:last-child {
+      margin-right: 0; }
+  /* line 36, ../../jade/scss/_portfolio.scss */
+  .portfolio-page .tab-content {
+    margin-top: 85px; }
+    /* line 38, ../../jade/scss/_portfolio.scss */
+    .portfolio-page .tab-content .content-pane {
+      margin-bottom: 55px; }
+    /* line 41, ../../jade/scss/_portfolio.scss */
+    .portfolio-page .tab-content .tab-pane.active {
+      background: #ffffff;
+      padding: 37px 52px 42px 0;
+      color: black; }
+      /* line 45, ../../jade/scss/_portfolio.scss */
+      .portfolio-page .tab-content .tab-pane.active .image-content {
+        float: right;
+        width: 480px;
+        margin-left: 82px; }
+      /* line 51, ../../jade/scss/_portfolio.scss */
+      .portfolio-page .tab-content .tab-pane.active .company-info .company-name {
+        background: #1ca5d7;
+        display: inline-block;
+        width: 353px;
+        padding: 34px 0 34px 68px;
+        color: white;
+        position: relative; }
+        /* line 58, ../../jade/scss/_portfolio.scss */
+        .portfolio-page .tab-content .tab-pane.active .company-info .company-name:before {
+          position: absolute;
+          content: "";
+          width: 0px;
+          border-top: 60px solid transparent;
+          border-bottom: 60px solid transparent;
+          border-left: 22px solid #1ca5d7;
+          right: -22px;
+          top: 0px; }
+        /* line 68, ../../jade/scss/_portfolio.scss */
+        .portfolio-page .tab-content .tab-pane.active .company-info .company-name h3 {
+          font-size: 23.56px;
+          text-transform: uppercase;
+          font-family: "proxima_nova_bold"; }
+        /* line 73, ../../jade/scss/_portfolio.scss */
+        .portfolio-page .tab-content .tab-pane.active .company-info .company-name span {
+          font-family: "roboto_condensed_light";
+          font-size: 17.89px; }
+      /* line 78, ../../jade/scss/_portfolio.scss */
+      .portfolio-page .tab-content .tab-pane.active .company-info span.time {
+        display: block;
+        padding-left: 68px;
+        margin-top: 20px; }
+      /* line 83, ../../jade/scss/_portfolio.scss */
+      .portfolio-page .tab-content .tab-pane.active .company-info ul {
+        padding-left: 68px; }
+        /* line 85, ../../jade/scss/_portfolio.scss */
+        .portfolio-page .tab-content .tab-pane.active .company-info ul h3.title {
+          font-family: "proxima_nova_bold";
+          font-size: 17.89px;
+          color: #1ca5d7;
+          text-transform: uppercase;
+          letter-spacing: 1px;
+          margin: 20px 0; }
+        /* line 93, ../../jade/scss/_portfolio.scss */
+        .portfolio-page .tab-content .tab-pane.active .company-info ul li {
+          line-height: 25.56px; }
+  /* line 100, ../../jade/scss/_portfolio.scss */
+  .portfolio-page .carousel-caption {
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.6);
+    bottom: 0;
+    left: 0;
+    height: 48px; }
+  /* line 107, ../../jade/scss/_portfolio.scss */
+  .portfolio-page .carousel-indicators {
+    bottom: 15px;
+    left: 90px; }
+    /* line 110, ../../jade/scss/_portfolio.scss */
+    .portfolio-page .carousel-indicators li {
+      width: 16px;
+      height: 16px;
+      background-color: #1ca5d7;
+      border: none;
+      margin: 0 16px; }
+      /* line 116, ../../jade/scss/_portfolio.scss */
+      .portfolio-page .carousel-indicators li.active {
+        background: #ffffff; }
+  /* line 121, ../../jade/scss/_portfolio.scss */
+  .portfolio-page .bx-pager.bx-default-pager {
+    top: 184px;
+    max-height: 0; }
+  /* line 125, ../../jade/scss/_portfolio.scss */
+  .portfolio-page .portfolio-content {
+    background: #fff; }
+  /* line 129, ../../jade/scss/_portfolio.scss */
+  .portfolio-page ul.portfolio-content-detail-slider {
+    width: 370px; }
+  /* line 133, ../../jade/scss/_portfolio.scss */
+  .portfolio-page .portfolio-content-detail {
+    margin: 40px 50px 50px 0;
+    color: #000000; }
 
 /* line 1, ../../jade/scss/_contact.scss */
 .map-contact a {
@@ -2411,8 +2519,8 @@ h1.title {
             height: 48px; }
             /* line 571, ../../jade/scss/_responsive.scss */
             .about-page .our-process .process-list li .sub-title .traingle {
-              height: 26px;
-              bottom: -26px; }
+              height: 22px;
+              bottom: -22px; }
           /* line 576, ../../jade/scss/_responsive.scss */
           .about-page .our-process .process-list li i {
             border: 1px solid #000;
