--- a/jade/scss/_portfolio.scss
+++ b/jade/scss/_portfolio.scss
@@ -1,31 +1,138 @@
-.portfolio-page{
-.portfolio-slider {
-  margin: 70px 0 85px;
-  li {
-    display: inline-block;
-    background: #fff;
+.portfolio-page {
+  padding-bottom: 0;
+  margin-bottom: -122px;
+  h1.title {
+    margin: 48px 0 57px 0;
+  }
+  .image-list li {
     width: 170px;
     height: 170px;
-    text-align: center;
-    vertical-align: middle;
-    img {
-      height: auto;
-      width: 100px;
+    display: inline-block;
+    margin-right: 25px;
+    margin-left: 0;
+    background: #000000;
+    opacity: 0.8;
+    &.active {
+      opacity: 1;
+      position: relative;
+      &:before {
+        position: absolute;
+        content: "";
+        width: 0px;
+        border-left: 11px solid transparent;
+        border-right: 11px solid transparent;
+        border-bottom: 11px solid #ffffff;
+        right: 41%;
+        bottom: -88px;
+      }
+    }
+    a {
+      padding: 0;
+    }
+    &:last-child {
+      margin-right: 0;
     }
   }
-}
+  .tab-content {
+    margin-top: 85px;
+    .content-pane {
+      margin-bottom: 55px;
+    }
+    .tab-pane.active {
+      background: $white;
+      padding: 37px 52px 42px 0;
+      color: black;
+      .image-content {
+        float: right;
+        width: 480px;
+        margin-left: 82px;
+      }
+      .company-info {
+        .company-name {
+          background: $blue;
+          display: inline-block;
+          width: 353px;
+          padding: 34px 0 34px 68px;
+          color: white;
+          position: relative;
+          &:before {
+            position: absolute;
+            content: "";
+            width: 0px;
+            border-top: 60px solid transparent;
+            border-bottom: 60px solid transparent;
+            border-left: 22px solid #1ca5d7;
+            right: -22px;
+            top: 0px;
+          }
+          h3 {
+            font-size: 23.56px;
+            text-transform: uppercase;
+            font-family: $proxima_nova_bold;
+          }
+          span {
+            font-family: $roboto_condensed_light;
+            font-size: 17.89px;
+          }
+        }
+        span.time {
+          display: block;
+          padding-left: 68px;
+          margin-top: 20px;
+        }
+        ul {
+          padding-left: 68px;
+          h3.title {
+            font-family: $proxima_nova_bold;
+            font-size: 17.89px;
+            color: $blue;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+            margin: 20px 0;
+          }
+          li {
+            line-height: 25.56px;
+          }
+        }
+      }
+    }
+  }
+  .carousel-caption {
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.6);
+    bottom: 0;
+    left: 0;
+    height: 48px;
+  }
+  .carousel-indicators {
+    bottom: 15px;
+    left: 90px;
+    li {
+      width: 16px;
+      height: 16px;
+      background-color: $blue;
+      border: none;
+      margin: 0 16px;
+      &.active {
+        background: $white;
+      }
+    }
+  }
+  .bx-pager.bx-default-pager {
+    top: 184px;
+    max-height: 0;
+  }
+  .portfolio-content {
+    background: #fff;
+  }
 
-.portfolio-content {
-  background: #fff;
-}
+  ul.portfolio-content-detail-slider {
+    width: 370px;
+  }
 
-ul.portfolio-content-detail-slider {
-  width: 370px;
-}
-
-.portfolio-content-detail {
-  margin: 40px 50px 50px 0;
-  color: #000000;
-}
+  .portfolio-content-detail {
+    margin: 40px 50px 50px 0;
+    color: #000000;
+  }
 
 }
